# stratified-shuffle

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py  setup.py
src/: __init__.py  app.py
src/models/: __init__.py  group.py  student.py
src/services/: __init__.py  group_service.py
src/utils/: __init__.py  constants.py
tests/: __init__.py  test_models.py  test_services.py
